--- a/Lab14/views/account.html
+++ b/Lab14/views/account.html
@@ -9,6 +9,7 @@
 
 <body>
     <form action="" method="post">
+        <span class="error">{account.phone}</span>
         <span class="error">{error.name}</span>
         <div>
             <input type="text" name="otp" placeholder="0000">
