--- a/Lab16/views/account/loginForm.ejs
+++ b/Lab16/views/account/loginForm.ejs
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-  <title>Login Page</title>
-  <link rel="stylesheet" href="/assets/reset.css">
-  <link rel="stylesheet" href="/assets/style.css">
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <title>Login Form</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/script.js"></script>
 </head>
+
 <body>
   <div class="login-form">
     <h1 class="title">Đăng nhập</h1>
 
-    <p><%= error ?? "" %><%= success ?? "" %></p>
-    
-    <form action="" method="post">
-      <div class="form-floating mb-3">
-        <label for="floatingInput">Email</label>
-        <input type="email" class="form-control" name="email" placeholder="Email...">
-        <span><%= errEmail ?? "" %></span>
-      </div>
+    <p class="message-block">
+      <span class="error-block">
+        <%= error ?? "" %>
+      </span>
+      <span class="success-block">
+        <%= success ?? "" %>
+      </span>
+    </p>
 
+    <form action="" method="post" class=form-input>
+      <div class="form-floating mb-3">
+        <input type="email" class="form-control" name="email" id="floatingInput" placeholder="Email..." fdprocessedid="aeunvs">
+        <label for="floatingInput">Email</label>
+        <span class="err-mess">
+          <%= errEmail ?? "" %>
+        </span>
+      </div>
       <div class="form-floating">
+        <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Password..." fdprocessedid="7esljg">
         <label for="floatingPassword">Password</label>
-        <input type="password" class="form-control" name="password" placeholder="Password...">
-        <span><%= errPass ?? "" %></span>
+        <span class="err-mess">
+          <%= errPass ?? "" %>
+        </span>
       </div>
 
       <button class="btn" type="submit">Đăng nhập</button>
     </form>
-
   </div>
 </body>
-</html>
