--- a/Lab17/views/home/index.ejs
+++ b/Lab17/views/home/index.ejs
@@ -52,7 +52,7 @@
                                                 <img src="/images/quick-icon.png" alt="quick-icon">
                                             </span>
                                     </h4>
-                                    <p class="text">
+                                    <p class="text client-text">
                                         <%= comments %>
                                     </p>
                                 </div>
