--- a/Lab17/public/assets/css/style.css
+++ b/Lab17/public/assets/css/style.css
@@ -20,12 +20,7 @@ body {
 
 /* Common */
 .container {
-    max-width: 1140px;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+    min-width: 1140px;
 }
 
 .padding_left_10 {
@@ -96,16 +91,23 @@ a {
     background-color: #252525 !important;
 }
 
-.navbar-expand-lg .navbar-nav .nav-link {
+.navbar .navbar-nav .nav-link, 
+.navbar .navbar-nav .nav-link-icon {
     padding: 8px;
     color: white;
 }
 
-.navbar-expand-lg .navbar-nav .nav-link.active,
-.navbar-expand-lg .navbar-nav .nav-link:hover,
+.navbar .navbar-nav .nav-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar .navbar-nav .nav-link.active,
+.navbar .navbar-nav .nav-link:hover,
+.navbar .navbar-nav .nav-link-icon:hover,
 .footer_menu a:hover,
 .search-icon_gal a:hover {
-    transition: all .3s ease-in-out;
     color: #f76d37;
 }
 
@@ -182,6 +184,9 @@ a {
 }
 
 .control-prev, .control-next {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 45px;
     height: 45px;
     background: #fff;
