--- a/Lab17/views/layouts/layout.ejs
+++ b/Lab17/views/layouts/layout.ejs
@@ -34,7 +34,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html">About Us</a>
@@ -46,10 +46,10 @@
                     <a class="nav-link" href="services.html">Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.hmtl">Contact Us</a>
+                    <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                    <a class="nav-link-icon" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                   </li>
                 </ul>
               </div>
