--- a/Lab39/ProjectB/views/index.ejs
+++ b/Lab39/ProjectB/views/index.ejs
@@ -12,10 +12,16 @@
   <h1>
     <%= title %>
   </h1>
-  <% if(!userId) {%>
+  </p>
+  <% if(!user) {%>
     <a href="http://localhost:3000/auth/login" class="btn btn-primary">Đăng nhập</a>
     <% }else {%>
-      <a href="http://localhost:3000/auth/logout" class="btn btn-danger">Đăng xuất</a>
+      <p>Xin chào: <b>
+          <%= user.name %>
+        </b></p>
+      <div class="">
+        <a href="http://localhost:3000/auth/logout" class="btn btn-danger">Đăng xuất</a>
+      </div>
       <% } %>
 </body>
 
